# CryptoTemplate

./: .gitmodules  CMakeLists.txt  README.md
.cmake/: Doxyfile.in
source/: main.cpp
